--- a/src/app/templates/comment/comment.component.html
+++ b/src/app/templates/comment/comment.component.html
@@ -9,7 +9,7 @@
           </a>
           <div class="ks-comment-box">
             <div class="ks-name">
-              <a *ngIf="!comment.deleted" href="javascript:void(0);">{{comment.createdBy}}</a>
+              <a *ngIf="!comment.deleted" href="javascript:void(0);">{{comment.user.username}}</a>
               <a *ngIf="comment.deleted" href="javascript:void(0);" translate>{{'comment.deleted'}}</a>
               <span class="ks-time">{{comment.createdAt | timezone}}</span>
             </div>
@@ -17,11 +17,11 @@
             <div *ngIf="comment.deleted" class="ks-message" translate>{{'comment.deleted-text'}}</div>
             <div class="ks-controls">
               <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted" (click)="addReply(comment)" class="ks-control">Reply</a>
-              <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.createdBy===authService.user.username" (click)="editComment(comment)" class="ks-control">Edit</a>
-              <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.createdBy===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control">Delete</a>
+              <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.user.username===authService.user.username" (click)="editComment(comment)" class="ks-control">Edit</a>
+              <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.user.username===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control">Delete</a>
               <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control">Hide Replies</a>
               <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control">View 36 Replies</a>
-              <a href="javascript:void(0);" *ngIf="authService.user && comment.deleted && comment.createdBy===authService.user.username" (click)="recoverComment(comment)" class="ks-control">Berreskuratu</a>
+              <a href="javascript:void(0);" *ngIf="authService.user && comment.deleted && comment.user.username===authService.user.username" (click)="recoverComment(comment)" class="ks-control">Berreskuratu</a>
             </div>
           </div>
         </div> 
@@ -33,7 +33,7 @@
             </a>
             <div class="ks-reply-box">
               <div class="ks-name">
-                <a *ngIf="!comment.deleted" href="javascript:void(0);">{{comment.createdBy}}</a>
+                <a *ngIf="!comment.deleted" href="javascript:void(0);">{{comment.user.username}}</a>
                 <a *ngIf="comment.deleted" href="javascript:void(0);" translate>{{'comment.deleted'}}</a>
                 <span class="ks-time">{{comment.createdAt | timezone}}</span>
               </div>
@@ -41,11 +41,11 @@
               <div *ngIf="comment.deleted" class="ks-message" translate>{{'comment.deleted-text'}}</div>
               <div class="ks-controls">
                 <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted" (click)="addReply(comment)" class="ks-control">Reply</a>
-                <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.createdBy===authService.user.username" (click)="editComment(comment)" class="ks-control">Edit</a>
-                <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.createdBy===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control">Delete</a>
+                <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.user.username===authService.user.username" (click)="editComment(comment)" class="ks-control">Edit</a>
+                <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.user.username===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control">Delete</a>
                 <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control">Hide Replies</a>
                 <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control">View 36 Replies</a>
-                 <a href="javascript:void(0);" *ngIf="authService.user && comment.deleted && comment.createdBy===authService.user.username" (click)="recoverComment(comment)" class="ks-control">Berreskuratu</a>
+                 <a href="javascript:void(0);" *ngIf="authService.user && comment.deleted && comment.user.username===authService.user.username" (click)="recoverComment(comment)" class="ks-control">Berreskuratu</a>
               </div>
             </div>
           </div>
