--- a/src/app/templates/modals/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/templates/modals/confirmation-modal/confirmation-modal.component.html
@@ -8,7 +8,7 @@
   <div class="modal-body">
     {{modalContent}}
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer justify-content-between">
   <button class="btn btn-primary confirm-btn" (click)="confirmModal()" translate>{{'modal.acept'}}</button>
   <button class="btn btn-primary confirm-btn" (click)="cancelModal()" translate>{{'modal.cancel'}}</button>
     
