--- a/src/app/pages/administrator/applications-administrator/edit-application/edit-application.component.html
+++ b/src/app/pages/administrator/applications-administrator/edit-application/edit-application.component.html
@@ -32,13 +32,13 @@
                   </ul>
                   <div class="tab-content">
                     <div class="tab-pane nav-eu" id="tab1" role="tabpanel">
-                      <app-application-form *ngIf="application" [inputOperation]="'edit'" [inputLanguage]="'eu'" [inputApplication]="application" [inputModerators]="moderator"></app-application-form>
+                      <app-application-form *ngIf="application" [inputOperation]="'edit'" [inputLanguage]="'eu'" [inputApplication]="application" [inputModerators]="moderator" (RefreshApplication)="refreshApplication($event)"></app-application-form>
                     </div>
                     <div class="tab-pane nav-es" id="tab2" role="tabpanel">
-                      <app-application-form *ngIf="application" [inputOperation]="'edit'" [inputLanguage]="'es'" [inputApplication]="application" [inputModerators]="moderator"></app-application-form>
+                      <app-application-form *ngIf="application" [inputOperation]="'edit'" [inputLanguage]="'es'" [inputApplication]="application" [inputModerators]="moderator" (RefreshApplication)="refreshApplication($event)"></app-application-form>
                     </div>
                     <div class="tab-pane nav-en" id="tab3" role="tabpanel">
-                     <app-application-form *ngIf="application" [inputOperation]="'edit'" [inputLanguage]="'en'" [inputApplication]="application" [inputModerators]="moderator"></app-application-form>
+                     <app-application-form *ngIf="application" [inputOperation]="'edit'" [inputLanguage]="'en'" [inputApplication]="application" [inputModerators]="moderator" (RefreshApplication)="refreshApplication($event)"></app-application-form>
                     </div>
                   </div>
                 </div>
