--- a/src/app/pages/observation/manage-observations/edit-observation/edit-observation.component.html
+++ b/src/app/pages/observation/manage-observations/edit-observation/edit-observation.component.html
@@ -32,13 +32,13 @@
                   </ul>
                   <div class="tab-content">
                     <div class="tab-pane nav-eu" id="tab1" role="tabpanel">
-                      <app-observation-form *ngIf="observation" [inputOperation]="'edit'" [inputLanguage]="'eu'" [inputObservation]="observation"></app-observation-form>
+                      <app-observation-form *ngIf="observation" [inputOperation]="'edit'" [inputLanguage]="'eu'" [inputObservation]="observation" (RefreshEvent)="refreshObservation($event)"></app-observation-form>
                     </div>
                     <div class="tab-pane nav-es" id="tab2" role="tabpanel">
-                      <app-observation-form *ngIf="observation" [inputOperation]="'edit'" [inputLanguage]="'es'" [inputObservation]="observation"></app-observation-form>
+                      <app-observation-form *ngIf="observation" [inputOperation]="'edit'" [inputLanguage]="'es'" [inputObservation]="observation" (RefreshEvent)="refreshObservation($event)"></app-observation-form>
                     </div>
                     <div class="tab-pane nav-en" id="tab3" role="tabpanel">
-                     <app-observation-form *ngIf="observation" [inputOperation]="'edit'" [inputLanguage]="'en'" [inputObservation]="observation"></app-observation-form>
+                     <app-observation-form *ngIf="observation" [inputOperation]="'edit'" [inputLanguage]="'en'" [inputObservation]="observation" (RefreshEvent)="refreshObservation($event)"></app-observation-form>
                     </div>
                   </div>
                 </div>
