--- a/src/app/templates/forms/service-form/service-form.component.html
+++ b/src/app/templates/forms/service-form/service-form.component.html
@@ -1,9 +1,3 @@
-<!-- Custom Success/Error Message -->
-<div *ngIf="message" class="row show-hide-message">
-  <div [ngClass]="messageClass">
-    {{ message }}
-  </div>
-</div>
 <!-- Service Form -->
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal">
   <div class="row">
@@ -110,7 +104,7 @@
       </div>
     </div>
     <!-- Location -->
-    <div *ngIf="!locationsExists.value" class="col-sm-12">
+    <div [hidden]="locationsExists.value" class="col-sm-12">
       <div class="form-group" [ngClass]="{'has-error': (!location.valid && location.dirty), 'has-success': (location.value)}">
         <label for="textareaLocation" translate>{{'event-form.location'}}</label>
         <textarea [formControl]="location" capitalize class="form-control" id="textareaLocation"></textarea>
