--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
                   </span>
                     <div class="dropdown">
                       <a class="translate-event dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" role="button" aria-haspopup="true" aria-expanded="false">
-                        <i class="la la-language"></i>
+                        <i class="la la-language" [ngClass]="event | translateCount"></i>
                       </a>
                       <div class="dropdown-menu dropdown-menu-right ks-scrollable" aria-labelledby="Preview">
                         <div class="ks-wrapper">
